# castzura

./: Cargo.toml
src/: ffmpeg_encoder.rs  main.rs  pw_source.rs  routes.rs
src/routes/: disconnect.rs  health.rs  status.rs  status_raw.rs  ws.rs
static/: index.html
templates/: status.html
