[package]
name = "castzura"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
eyre = "0.6"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc = "0.17"
