[package]
name = "castzura"
version = "0.1.0"
edition = "2024"

[dependencies]
ashpd = { version = "0.12", features = ["tracing"] }
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
eyre = "0.6"
pipewire = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc = "0.17"
